Added Player class and movement

--- a/RadarGame/RadarGame.vcxproj
+++ b/RadarGame/RadarGame.vcxproj
@@ -20,9 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="RTexture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="rconfigurations.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="RTexture.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
