--- a/RadarGame/RadarGame.vcxproj.filters
+++ b/RadarGame/RadarGame.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="RTexture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RTexture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rconfigurations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
