--- a/RadarGame/RadarGame.vcxproj
+++ b/RadarGame/RadarGame.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="RTexture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="rconfigurations.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="RTexture.h" />
