Moved all components to Game class

--- a/RadarGame/RadarGame.vcxproj
+++ b/RadarGame/RadarGame.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyBelt.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -32,6 +33,7 @@
     <ClInclude Include="Coin.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyBelt.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Radar.h" />
     <ClInclude Include="rconfigurations.h" />
