--- a/RadarGame/RadarGame.vcxproj
+++ b/RadarGame/RadarGame.vcxproj
@@ -93,8 +93,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2_image-devel-2.0.3-VC\SDL2_image-2.0.3\include;C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2-2.0.8\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2_image-devel-2.0.3-VC\SDL2_image-2.0.3\lib\x86;C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2-2.0.8\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2_ttf-2.0.15\include;C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2_image-devel-2.0.3-VC\SDL2_image-2.0.3\include;C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2-2.0.8\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2_ttf-2.0.15\lib\x86;C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2_image-devel-2.0.3-VC\SDL2_image-2.0.3\lib\x86;C:\Users\Azadan\Documents\MyFiles\C++ProgrammingLearning\C++ Libraries\SDL2-2.0.8\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -103,7 +103,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
